[package]
name = "packman"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
reqwest = { version = "0.11", features = ["blocking"]}
tokio = "1"
toml = "0.5.9"
serde = {version = "1.0.136", features = ["derive"]}